[metadata]
name = moadian
version = 1.0.0
author = Masoud Taee
author_email = mmtaee64@gmail.com
description = Iranian Tax API service to handle invoices
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/arjavand/moadian
project_urls =
    Bug Tracker = https://github.com/arjavand/moadian/issues
    repository = https://github.com/arjavand/moadian
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3 License
    Operating System :: OS Independent

[options]
;package_dir =
;    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
;where = src