[metadata]
name = moadian
version = 1.0.1
author = Masoud Taee (Technical Team Lead at Arjavand Co.)
author_email = mmtaee64@gmail.com, mmtaee.arjavand@gmail.com
description = Moadian(Iranian Tax) API service to handle invoices
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/arjavand/moadian
project_urls =
    Bug Tracker = https://github.com/arjavand/moadian/issues
    repository = https://github.com/arjavand/moadian
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GPL-3 License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
